SET(MIAMESH_SRC
  triangularMesh.cc
) 

SET(MIAMESH_HEADERS
  triangularMesh.hh
)


ADD_LIBRARY(miamesh SHARED ${MIAMESH_SRC})
TARGET_LINK_LIBRARIES(miamesh mia3d)


MACRO(TEST_MESH name)
  ADD_EXECUTABLE(test-${name} test_${name}.cc)  
  TARGET_LINK_LIBRARIES(test-${name} miamesh ${BOOST_UNITTEST})
  ADD_TEST(${name} test-${name})
  IF(WIN32)
    SET_TARGET_PROPERTIES(test-${name} PROPERTIES LINKER_FLAGS "/NODEFAULTLIB:MSVCRT")
  ENDIF(WIN32)
ENDMACRO(TEST_MESH name)


SET_TARGET_PROPERTIES(miamesh PROPERTIES VERSION ${LIBRARY_VERSION_INFO})

SET(INSTALL_MESH miamesh)	
INSTALL_WITH_EXPORT("${INSTALL_MESH}")
INSTALL(FILES ${MIAMESH_HEADERS} DESTINATION ${INCLUDE_INSTALL_PATH}/mia/mesh)

SET(MIAMESHLIBS miamesh)

ADD_SUBDIRECTORY(io)


TEST_MESH(triangulate)